--- a/app/partials/halbtonberechnung.html
+++ b/app/partials/halbtonberechnung.html
@@ -1,13 +1,13 @@
 <div ng-controller="HalbtonController">
     <div>
         Grundton
-        <select ng-model="grundton" ng-options="ton.name  for ton in halbtoene"></select>
+        <select ng-model="grundton" ng-options="ton.name  for ton in halbtoene" ng-required="true" ng-change="berechneZielton(grundton,abstand)"></select>
     </div>
     <div>
         Abstand
-        <input type="number" ng-maxlength="2" ng-minlength="1" ng-model="abstand" ng-change="berechneZielton(grundton,abstand)"/>
+        <input type="number" ng-required="true" ng-maxlength="2" ng-minlength="1" ng-model="abstand" ng-change="berechneZielton(grundton,abstand)"/>
     </div>
     <div>
-        Zielton {{ zielton }}
+        Zielton {{ zielton.name }}
     </div>
 </div>
