- Es gibt immer eine Ausgabe - Layout geändert

--- a/app/partials/halbtonberechnung.html
+++ b/app/partials/halbtonberechnung.html
@@ -1,19 +1,20 @@
-<div class="container" >
-    <div class="form-inline" role="form">
-
+<div class="" >
+    <div class="form-inline" role="form" style="font-size: 40px; padding-top: 20px; font-weight: bold">
+        Wenn ich von
 
         <select ng-model="grundton" ng-options="ton.name  for ton in halbtoene" ng-required="true"
                 ng-change="berechneZielton(grundton,abstand)"
-                class="form-control halbtonInput">
+                class="form-control">
             <option value="">Grundton</option>
         </select>
 
         <input type="number" ng-required="true" ng-maxlength="2" ng-minlength="1" ng-model="abstand"
                ng-change="berechneZielton(grundton,abstand)" placeholder="Notenabstand"
-               class="form-control halbtonInput"/>
+               class="form-control"/>
+        Halbtonschritte weiterzähle lande ich bei
     </div>
     <p style="font-size: 20px; padding-top: 20px; padding-bottom: 30px;">
-        Zielton
+
 
     </p>
 
