--- a/app/css/app.css
+++ b/app/css/app.css
@@ -30,6 +30,16 @@
 }
 
 .halbtonInput {
-/*    height: 50px;
-    font-size: 20px;*/
+    height: 40px;
+    font-size: 40px;
+    padding-top: 0px;
+    margin-top: 0px;
+}
+
+.halbtonText {
+
+    font-size: 40px;
+    padding-top: 50px;
+    margin-top: 50px;
+    font-weight: bold;
 }
