--- a/app/partials/halbtonberechnung.html
+++ b/app/partials/halbtonberechnung.html
@@ -13,12 +13,9 @@
                class="form-control"/>
         Halbtonschritte weiterzähle lande ich bei
     </div>
-    <p style="font-size: 20px; padding-top: 20px; padding-bottom: 30px;">
 
 
-    </p>
-
-    <p style="font-size: 100px; font-weight: bold">
+    <p style="font-size: 100px; font-weight: bold;padding-top: 50px; padding-bottom: 30px;">
         {{ zielton.name }}
     </p>
 
