--- a/app/partials/gitarre.html
+++ b/app/partials/gitarre.html
@@ -1,5 +1,9 @@
-<div class="" >
-    <div class="form-inline halbtonQuestion" role="form">
+
+<div class="gitarrenHals">
+
+    <div>
+</div>
+    <div class="form-inline" role="form" style="font-size: 40px; padding-top: 20px; font-weight: bold">
         Wenn ich von
 
         <select ng-model="grundton" ng-options="ton.name  for ton in halbtoene" ng-required="true" required="true"
@@ -15,7 +19,7 @@
     </div>
 
 
-    <p class="halbtonAnswer">
+    <p style="font-size: 100px; font-weight: bold;padding-top: 50px; padding-bottom: 30px;">
         {{ zielton.name }}
     </p>
 
