--- a/app/partials/gitarre.html
+++ b/app/partials/gitarre.html
@@ -1,27 +1,9 @@
+<div class="gitarre" ng-controller="GitarrenController">
+    <div class="gitarrenHals">
 
-<div class="gitarrenHals">
-
-    <div>
-</div>
-    <div class="form-inline" role="form" style="font-size: 40px; padding-top: 20px; font-weight: bold">
-        Wenn ich von
-
-        <select ng-model="grundton" ng-options="ton.name  for ton in halbtoene" ng-required="true" required="true"
-                ng-change="berechneZielton(grundton,abstand)"
-                class="form-control">
-            <option value="">Grundton</option>
-        </select>
-
-        <input type="number" ng-required="true" ng-maxlength="2" ng-minlength="1" maxlength="2" required="true" ng-model="abstand"
-               ng-change="berechneZielton(grundton,abstand)" placeholder="Notenabstand"
-               class="form-control"/>
-        Halbtonschritte weiterzähle lande ich bei
+        <div ng-repeat="saite in normalSaiten" class="saite-{{$index+1}}">
+            <div ng-repeat="bund in bundRange" style="display: inline-block"><div class="bundClass"> </div></div>
+        </div>
     </div>
 
-
-    <p style="font-size: 100px; font-weight: bold;padding-top: 50px; padding-bottom: 30px;">
-        {{ zielton.name }}
-    </p>
-
-</div>
 </div>
