--- a/app/css/app.css
+++ b/app/css/app.css
@@ -127,12 +127,15 @@ hr {
 .gitarrenHals {
     padding-top: 3em;
     width: 50em;
-    overflow-x: hidden;
+
 }
 
+.gitarre {
+    height:100%;
+}
 .bundClass {
     width: 3em;
-    height: 2em;
+    height: 2.4em;
     border-left: 0.1em solid rgba(0, 0, 0, 0.18);
     border-right: 0.1em solid rgba(0, 0, 0, 0.7);
     background-color: #463320;
@@ -141,7 +144,7 @@ hr {
 
 .bundClassLeer {
     width: 3em;
-    height: 2em;
+    height: 2.4em;
     background-color: #ffffff;
     overflow-x: hidden;
 }
