--- a/app/css/app.css
+++ b/app/css/app.css
@@ -128,8 +128,8 @@ hr {
     -webkit-border-radius: 0.4em;
     -moz-border-radius: 0.4em;
     border-radius: 0.5em;
-    color: #113711;
-    background-color: #113711;
+    color: #2a9b2a;
+    background-color: #2a9b2a;
     display: inline-block;
 }
 
