Applied some jshint

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -42,7 +42,7 @@ hr {
 }
 
 .bundInSaite-1Leer, .bundInSaite-2Leer, .bundInSaite-3Leer,.bundInSaite-4Leer, .bundInSaite-5Leer, .bundInSaite-6Leer{
-    height: 0px;
+    height: 0;
 }
 
 
