Refactoring to make the app more testable. select(*).option(value) seems to select on a substring base

--- a/app/partials/halbtonberechnung.html
+++ b/app/partials/halbtonberechnung.html
@@ -24,7 +24,7 @@
     <div class="row-fluid">
 
         <div class="halbtonAnswer">
-            {{ zielton.name }}
+            {{ zielton.targetName }}
         </div>
     </div>
 
