--- a/app/partials/halbtonberechnung.html
+++ b/app/partials/halbtonberechnung.html
@@ -21,7 +21,7 @@
     </div>
 
 
-    <div class="row-fluid" style="margin-top: 0.5em">
+    <div class="row-fluid" style="margin-top: 0.5em; background-color: #ffffff">
 
         <div class="halbtonAnswer">
             {{ zielton.targetName }}
