--- a/app/css/app.css
+++ b/app/css/app.css
@@ -11,6 +11,7 @@ a, a:hover {
 
 body.app {
     background: rgba(118, 221, 157, 0.77) repeat 0 0;
+    background-image: url("/img/texture/notebook/notebook_green.png");
     height: 20em;
 }
 
