--- a/app/partials/halbtonberechnung.html
+++ b/app/partials/halbtonberechnung.html
@@ -1,34 +1,34 @@
-<div class="container-fluid">
-    <div class="halbtonQuestion" role="form" class="row-fluid">
-        <div class="col-md-1">Wenn ich von
+<div class="row" >
+   <!-- <div class="col-md-2"><i class="fa fa-question fa-5x"></i></div>-->
+    <div class="col-md-12 halbtonQuestion">Wenn ich von
 
+        <select ng-model="grundton" ng-options="ton.name  for ton in halbtoene" ng-required="true" required="true"
+                ng-change="berechneZielton(grundton,abstand)"
+                class="">
+            <option value="">Grundton</option>
+        </select>
 
-            <select ng-model="grundton" ng-options="ton.name  for ton in halbtoene" ng-required="true" required="true"
-                    ng-change="berechneZielton(grundton,abstand)"
-                    class="">
-                <option value="">Grundton</option>
-            </select>
-
-
-            <input type="number" ng-required="true" ng-maxlength="2" ng-minlength="1" maxlength="2" required="true"
-                   ng-model="abstand"
-                   ng-change="berechneZielton(grundton,abstand)" placeholder="Notenabstand"
-                   class=""/>
-            Halbtonschritte weiterzähle lande ich bei
-        </div>
-
+        <input type="number" ng-required="true" ng-maxlength="2" ng-minlength="1" maxlength="2" required="true"
+               ng-model="abstand"
+               ng-change="berechneZielton(grundton,abstand)" placeholder="Notenabstand" style="width: 7em"
+               class="" />
+        Halbtonschritte weiterzähle lande ich bei
 
     </div>
+    <!--<div class="col-md-2"></div>-->
 
-
-    <div class="row-fluid" style="margin-top: 0.5em; background-color: #ffffff">
-
-        <div class="halbtonAnswer">
-            {{ zielton.targetName }}
-        </div>
-    </div>
-
-    <div ng-include="'partials/gitarre.html'">
-    </div>
 
 </div>
+
+
+<div class="row" style="margin-top: 0.5em;">
+    <!--<div class="col-xs-1 col-sm-3 col-md-3">i class="fa fa-exclamation fa-5x"></i></div>-->
+    <div class="halbtonAnswer col-md-6 col-md-offset-3">
+        {{ zielton.targetName }}
+    </div>
+   <!--<div class="col-xs-1 col-sm-3 col-md-3"></div>-->
+</div>
+
+<div ng-include="'partials/gitarre.html'" class="row">
+</div>
+
