Some placeholder styling. Strange!

--- a/app/partials/halbtonberechnung.html
+++ b/app/partials/halbtonberechnung.html
@@ -1,6 +1,6 @@
 <div class="row" >
    <!-- <div class="col-md-2"><i class="fa fa-question fa-5x"></i></div>-->
-    <div class="col-md-12 halbtonQuestion">Wenn ich von
+    <div class="col-md-12 halbtonQuestion">Wenn ich vom
 
         <!--Seems strange to me: http://stackoverflow.com/questions/2547354/how-to-increase-the-height-of-the-select-box-->
         <select ng-model="grundton" ng-options="ton.name  for ton in halbtoene" ng-required="true" required="true"
@@ -11,7 +11,7 @@
 
         <input type="number" ng-required="true" ng-maxlength="2" ng-minlength="1" maxlength="2" required="true"
                ng-model="abstand"
-               ng-change="berechneZielton(grundton,abstand)" placeholder="Notenabstand" style="width: 7em"
+               ng-change="berechneZielton(grundton,abstand)" placeholder="einige" style="width: 7em; background:none;"
                class="" />
         Halbtonschritte weiterzähle lande ich bei
 
