--- a/app/css/app.less
+++ b/app/css/app.less
@@ -4,8 +4,10 @@ body {
   font-size: 100%;
 }
 
+@text-color:#484848;
+
 a, a:hover {
-  color: #484848;
+  color: @text-color;
 }
 
 body.app {
@@ -22,8 +24,14 @@ hr {
 }
 
 select, input {
-  color: #484848;
+  color: @text-color;
 }
+
+
+::-webkit-input-placeholder { line-height: normal;  color: @text-color }
+:-moz-placeholder {color: @text-color }
+:-ms-input-placeholder {color: @text-color }
+
 
 .bundInSaite-1 {
   height: 1px;
@@ -70,7 +78,7 @@ select, input {
   font-weight: bold;
   padding-top: 0.1em;
   line-height: 1em;
-  color: #484848;
+  color: @text-color;
   text-align: center;
   background: rgba(102, 201, 139, 0.77) repeat 0 0;
   font-family: 'Allan', Helvetica, Arial, sans-serif;
